--- a/FON_show2/FON_show2.csproj
+++ b/FON_show2/FON_show2.csproj
@@ -55,6 +55,7 @@
     <Compile Include="block.Designer.cs">
       <DependentUpon>block.cs</DependentUpon>
     </Compile>
+    <Compile Include="fontheader.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
